Fixed spacing between speakers.

--- a/content/stylesheets/main.scss
+++ b/content/stylesheets/main.scss
@@ -238,7 +238,7 @@ header {
 
     @include transition(height 0.5s);
 
-    &:nth-of-type(2n) {
+    &:nth-of-type(2n+1) {
         margin-right: 0;
     }
 
